--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
 
   <div class="examples">
     <!-- title -->
-    <h2 data-tid="title" style="width: 10rem;">Welcome!</h2>
+    <h2 data-tid="title" style="width: 10rem;">Lorem Ipsum!</h2>
 
     <!-- paragraph -->
     <p data-tid="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
