--- a/examples/index.html
+++ b/examples/index.html
@@ -9,7 +9,7 @@
 
   <div class="examples">
     <!-- title -->
-    <h2 data-tid="title" style="width: 13rem;">Lorem Ipsum!</h2>
+    <h2 data-tid="title" style="width: 13rem;">Lorem Ipsum</h2>
 
     <!-- paragraph -->
     <p data-tid="paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
@@ -26,7 +26,7 @@
 
     <!-- svg -->
     <svg data-tid="svg" width="100" height="100">
-      <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="4" fill="yellow" />
+      <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
       Sorry, your browser does not support inline SVG.
     </svg>
 
