--- a/examples/index.html
+++ b/examples/index.html
@@ -30,8 +30,9 @@
       Sorry, your browser does not support inline SVG.
     </svg>
 
-    <!-- scrollable element-->
+    <!-- scrollable wrapper -->
     <div data-tid="scrollable-wrapper" style="width: 25rem;height: 5rem; overflow: auto;">
+      <!-- scrollable content-->
       <p data-tid="scrollable-content" style="min-width: 40rem;">Lorem Ipsum is simply dummy text of the printing and
         typesetting industry. Lorem
         Ipsum
