--- a/examples/index.html
+++ b/examples/index.html
@@ -26,7 +26,7 @@
 
     <!-- svg -->
     <svg data-tid="svg" width="100" height="100">
-      <circle cx="50" cy="50" r="40" stroke="pink" stroke-width="4" fill="yellow" />
+      <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="4" fill="yellow" />
       Sorry, your browser does not support inline SVG.
     </svg>
 
